--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -11,7 +11,7 @@
 
 
 % lijst met woorden die LaTeX verkeerd splitst
-\hyphenation{Ha-da-mard-trans-for-ma-tie Fourier-transformatie post-script} 
+\hyphenation{vaag-ver-za-me-ling L-vaag-ver-za-me-ling} 
 
 \def\listfigurename{Lijst van figuren}
 
