fundamenten nog meer aangevuld

--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -1,8 +1,8 @@
 \chapter{Wiskundige fundamenten}
 
 In dit hoofdstuk introduceren we eerst enkele basisbegrippen uit de vaagverzamelingenleer. 
-Daarna geven we een overzicht van de similariteitsmaten en aggregatieoperatoren waarvan
-we in het vervolg van deze scriptie gebruik zullen maken.
+Daarna geven ook nog een overzicht van de aggregatieoperatoren waarvan
+we verder in deze scriptie gebruik zullen maken.
 
 \section{Vaagverzamelingen}
 
@@ -142,7 +142,7 @@ $$
 voor alle $x$ in $X$, met $\mathcal{D}$ een disjunctor.
 \end{definitie}
 
-In het vervolg van deze scriptie zullen we doorgaands 
+In het vervolg van deze scriptie zullen we meestal 
 $(\mathcal{N},\mathcal{C},\mathcal{D})=(N_s,T_M,S_M)$ kiezen. We voeren daarom de volgende
 verkorte notaties in:
 $$
@@ -255,5 +255,9 @@ $\mathcal{D}(l,l)=l$. Als een disjunctor voldoet aan
 $(\forall a \in L)(\mathcal{D}(l,a)=\mathcal{D}(a,l)=a)$ dan spreekt met van een semi-conorm.
 Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 \end{definitie}
+
+Merk op dat we in de bijzondere gevallen waarbij $L=[0,1]^n$ met $n > 0$, 
+$(\mathcal{N},\mathcal{C},\mathcal{D})=(N_s,T_M,S_M)$ kunnen kiezen.
+
 
 \section{Aggregatieoperatoren} 
