--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -24,12 +24,12 @@
 \newcommand{\auteur}{Klaas Bosteels}
 \newcommand{\jaar}{2005--2006}
 \newcommand{\titel}{Similariteitsgebaseerd rangschikken van afbeeldingen in zoekmachines}
-\newcommand{\begeleider}{lic.\ M.\ de Leider  en ir.\  M.\ de Lijder}
+\newcommand{\begeleider}{V. De Witte en S.\ Schulte}
 \newcommand{\richting}{licentiaat in de informatica, optie: software-ontwikkeling}
 
 %de volgende lijn kiest de juiste naam van de vakgroepvoorzitter en de promotor
 \newcommand{\vakgroep}{Toegepaste Wiskunde en Informatica}
-\newcommand{\voorzitter}{Prof.\ dr.\ Guido\ Vanden\ Berghe}
+\newcommand{\voorzitter}{prof.\ dr.\ Guido\ Vanden\ Berghe}
 \newcommand{\promotor}{prof.\ dr.\ \ E.\ E.\ Kerre}
 
 
