--- a/Thesis/titel.tex
+++ b/Thesis/titel.tex
@@ -40,7 +40,7 @@ Promotor: \promotor \\
 Thesisbegeleider: \begeleider 
 \\\vfill
 %        In samenwerking met BARCO GRAPHICS\\
-Afstudeerwerk ingediend tot het behalen van de graad van
+Afstudeerwerk ingediend tot het behalen van de graad van\\
 %dit moet uiteraard worden aangepast!
 \richting\\[1cm]
 Academiejaar \jaar
