--- a/Thesis/fundamenten.tex
+++ b/Thesis/fundamenten.tex
@@ -1,10 +1,13 @@
 \chapter{Wiskundige fundamenten}
 
 In dit hoofdstuk introduceren we eerst enkele basisbegrippen uit de vaagverzamelingenleer. 
-Daarna geven ook nog een overzicht van de aggregatieoperatoren waarvan
+Daarna geven ook nog een overzicht van de similariteitsmaten en aggregatieoperatoren waarvan
 we verder in deze scriptie gebruik zullen maken.
 
-\section{Vaagverzamelingen}
+
+\section{Basisbegrippen uit de vaagverzamelingenleer}
+
+\subsection{Vaagverzamelingen}
 
 De collectie van alle mogelijke elementen noemen we het \emph{universum} (bijvoorbeeld de
 natuurlijke getallen). Een verzameling bevat bepaalde elementen uit dit universum (bijvoorbeeld de 
@@ -74,7 +77,7 @@ $$
 $$
 \end{definitie}
 
-\section{Bewerkingen op vaagverzamelingen}
+\subsection{Bewerkingen op vaagverzamelingen}
 \label{sectie:bew_op_vaagverz}
 
 We beginnen met het defini\"eren van de begrippen \emph{negator}, \emph{conjunctor} en 
@@ -155,7 +158,7 @@ $$
 waarbij $A$ en $B$ vaagverzamelingen zijn.
 
 
-\section{L-vaagverzamelingen}
+\subsection{L-vaagverzamelingen}
 
 Het begrip vaagverzameling kan op zijn beurt nog eens uitgebreid worden tot 
 \emph{L-vaagverzameling}. Deze uitbreiding is gebaseerd op het concept \emph{tralie}. We geven
@@ -228,7 +231,7 @@ $$
 $$
 met $A(x)=(A_1(x),A_2(x),\ldots,A_n(x))$, $\forall x \in X$.  
 
-\section{Bewerkingen op L-vaagverzamelingen}
+\subsection{Bewerkingen op L-vaagverzamelingen}
 
 In deze sectie gaan we de begrippen \emph{negator}, \emph{conjunctor} en 
 \emph{disjunctor} uitbreiden naar L-vaag\-ver\-za\-me\-ling\-en. Deze uitbreiding heeft als gevolg dat de
@@ -259,5 +262,7 @@ Een driehoeksconorm (t-conorm) is een commutatieve en associatieve semi-conorm.
 Merk op dat we in de bijzondere gevallen waarbij $L=[0,1]^n$ met $n > 0$, 
 $(\mathcal{N},\mathcal{C},\mathcal{D})=(N_s,T_M,S_M)$ kunnen kiezen.
 
+
+\section{Similariteitsmaten}
 
 \section{Aggregatieoperatoren} 
