--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -6,8 +6,9 @@
 \usepackage{epsfig}
 \usepackage[small]{caption}
 \usepackage{url}
+\usepackage{subfigure}
 
-\usepackage{phd}
+\usepackage{scriptie}
 
 
 % lijst met woorden die LaTeX verkeerd splitst
@@ -36,7 +37,7 @@
 \input{titel} % de titelpagina
 \pagenumbering{roman}
 \setcounter{page}{1}
-\input{dankwrd}               %het dankwoord.
+\input{voorwoord}             %het voorwoord.
 \input{abstract}              %samenvatting  van de thesis
 \renewcommand{\baselinestretch}{1}
 
