--- a/Thesis/titel.tex
+++ b/Thesis/titel.tex
@@ -23,13 +23,14 @@ Vakgroep \vakgroep\\
 Voorzitter: \voorzitter
 }\\\vfill
 \parbox{14 cm}{
-{\huge\bfseries
+{\Huge\bfseries
 \begin{center}
 \sf\titel
 \end{center}
 }
 }\\\vfill
-door \auteur\\[3.3cm]
+door\\ 
+{\LARGE \auteur}\\[3.3cm]
 %we schrijven ``.\"  i.p.v. ``.'' zodat LaTeX weet dat dit een
 %afkorting is (gevolgd door kleine spatie) en niet het einde van een
 %zin (gevolgd door lange spatie)
@@ -37,7 +38,7 @@ door \auteur\\[3.3cm]
 %opmerking: ofwel: prof.\ dr.\ ir.\ W.\ Philips
 Promotor: \promotor \\
 %Co-promotor: \copromotor \\
-Thesisbegeleider: \begeleider 
+Scriptiebegeleiders: \begeleider 
 \\\vfill
 %        In samenwerking met BARCO GRAPHICS\\
 Afstudeerwerk ingediend tot het behalen van de graad van\\
