--- a/Thesis/inleiding.tex
+++ b/Thesis/inleiding.tex
@@ -27,9 +27,9 @@ uit de databank te overlopen, vermits de databank ge\"indexeerd is op de annotat
 \section{Content-based image retrieval}
 
 Omdat de tekst-gebaseerde aanpak in de praktijk dikwijls tekort schiet, is men op zoek gegaan 
-naar manieren om het zoeken te baseren op de visuele inhoud van de afbeeldingen. Bij 
-\emph{content-based image retrieval} (CBIR) maakt men gebruik van een proces dat 
-\emph{(visual) feature extraction} genoemd wordt. Dit proces zet een afbeelding om in een 
+naar manieren om het zoeken te baseren op de visuele inhoud van de afbeeldingen 
+\cite{veltcamp:cbirs}. Bij \emph{content-based image retrieval} (CBIR) maakt men gebruik van een proces dat 
+\emph{(visual) feature extraction} genoemd wordt \cite{rui:image_retr}. Dit proces zet een afbeelding om in een 
 \emph{feature vector}. Met behulp van multidimensionale indexering kan men deze kenmerkenvector
 dan gebruiken als alternatief voor de tekstuele annotaties bij TBIR.
 
@@ -57,7 +57,7 @@ vermijden dat men hiervoor de volledige databank moet overlopen.
 \end{center}
 \end{figure}
 
-\section{Similariteitsgebaseerd rangschikken van de resultaten}
+\section{Similariteitsgebaseerd rangschikken van de zoekresultaten}
 
 Door hun grote complexiteit is het vrijwel onmogelijk om CBIR-systemen te gebruiken voor het 
 doorzoeken van zeer omvangrijke databanken. Bovendien beschikt de gebruiker niet altijd over
