--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -31,7 +31,7 @@
 %de volgende lijn kiest de juiste naam van de vakgroepvoorzitter en de promotor
 \newcommand{\vakgroep}{Toegepaste Wiskunde en Informatica}
 \newcommand{\voorzitter}{prof.\ dr.\ Guido\ Vanden\ Berghe}
-\newcommand{\promotor}{prof.\ dr.\ \ E.\ E.\ Kerre}
+\newcommand{\promotor}{prof.\ dr.\ E.\ E.\ Kerre}
 
 
 \input{titel} % de titelpagina
@@ -57,11 +57,8 @@
 
 \input{fundamenten}
 
+\input{similariteit}
 
-\chapter{Similariteit}
-
-\section{Pixel-gebaseerd}
-\section{Kleur-gebaseerd}
 
 \chapter{Aggregatie}
 
