--- a/Thesis/abstract.tex
+++ b/Thesis/abstract.tex
@@ -49,8 +49,8 @@ systeem de zoekresultaten rangschikt op een manier die de gelijkenis met de voor
 
 Voor het modelleren van de graduele gelijkenis tussen afbeeldingen, maken we gebruik van 
 vaagsimilariteitsmaten. Daarnaast zullen we ook nog beroep doen op aggregatieoperatoren,
-zowel voor het combineren van verschillende similariteitsmaten als voor het samenvoegen
-van de voorbeeld-afbeeldingen. 
+zowel voor het combineren van verschillende similariteitsmaten als voor het ondersteunen van
+meerdere voorbeeld-afbeeldingen. 
 %\vspace{5mm}
 
 %\noindent {\bf\Large Trefwoorden}\\[1mm]
