--- a/Thesis/thesis.tex
+++ b/Thesis/thesis.tex
@@ -10,6 +10,9 @@
 
 \usepackage{scriptie}
 
+\usepackage{pst-bar} % moet (blijkbaar) na het scriptiepakket ingevoegd worden
+\usepackage{pst-plot}
+
 
 % lijst met woorden die LaTeX verkeerd splitst
 \hyphenation{vaag-ver-za-me-ling L-vaag-ver-za-me-ling} 
@@ -62,8 +65,8 @@
 
 \chapter{Aggregatie}
 
-\section{Aggregatie van similariteiten}
-\section{Aggregatie van afbeeldingen}
+\section{Gecombineerde similariteitsmaten}
+\section{Meerdere voorbeeld-afbeeldingen}
 
 
 \chapter{Implementatie}
